--- a/.env.example
+++ b/.env.example
@@ -26,4 +26,4 @@ MAIL_ENCRYPTION=null
 
 FACEBOOK_CLIENT_ID=xxxxx
 FACEBOOK_CLIENT_SECRET=xxxxx
-REDIRECT_URL=http://localhost:8000/fb/signin/callback
+FACEBOOK_REDIRECT_URL=http://localhost:8000/fb/signin/callback
