[WIP] Popup appears when user comes into forbidden area of application

--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
     "angular-route": "*",
     "angular-ui-select": "*",
     "angular-sanitize": "*",
-    "angular-bootstrap": "*"
+    "angular-bootstrap": "*",
+    "ng-dialog": "*"
   }
 }
