--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "private": true,
   "devDependencies": {
     "gulp": "^3.8.8",
-    "bower": "*"
+    "bower": "*",
+    "laravel-elixir-html-minify": "^1.0.1"
   },
   "dependencies": {
     "laravel-elixir": "^4.0.0",
