--- a/bower.json
+++ b/bower.json
@@ -2,13 +2,12 @@
   "name": "kicker",
   "dependencies": {
     "bootstrap": "^3.3.6",
-    "select2": "*",
     "eonasdan-bootstrap-datetimepicker": "*",
     "angular": "*",
     "angular-route": "*",
     "angular-ui-select": "*",
     "angular-sanitize": "*",
     "angular-bootstrap": "*",
-    "ng-dialog": "*"
+    "ng-file-upload": "*"
   }
 }
