--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
     "angular-ui-select": "*",
     "angular-sanitize": "*",
     "angular-bootstrap": "*",
-    "ng-file-upload": "*"
+    "ng-file-upload": "*",
+    "angular-resource": "*"
   }
-}
+}1
