Alert message when user's profile is changing.

--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
     "angular-sanitize": "*",
     "angular-bootstrap": "*",
     "ng-file-upload": "*",
-    "angular-resource": "*"
+    "angular-resource": "*",
+    "angular-animate": "*"
   }
-}1
+}
