--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "laravel/framework": "5.2.*",
         "laravel/socialite": "~2.0",
         "laravelcollective/html": "5.2.*",
-        "cviebrock/image-validator": "^2.0"
+        "intervention/image": "~2.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
