--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.2.*",
         "laravel/socialite": "~2.0",
         "laravelcollective/html": "5.2.*",
-        "intervention/image": "~2.3"
+        "intervention/image": "~2.3",
+        "ext-gd": "*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
