--- a/bower.json
+++ b/bower.json
@@ -5,13 +5,13 @@
     "eonasdan-bootstrap-datetimepicker": "*",
     "angular": "*",
     "angular-route": "*",
-    "angular-ui-select": "*",
     "angular-sanitize": "*",
     "angular-bootstrap": "*",
     "ng-file-upload": "*",
     "angular-resource": "*",
     "angular-animate": "*",
     "ng-dialog": "*",
-    "underscore": "*"
+    "underscore": "*",
+    "angular-material": "^1.0.8"
   }
 }
