--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "private": true,
   "devDependencies": {
-    "gulp": "^3.8.8",
     "bower": "*",
-    "laravel-elixir-html-minify": "^1.0.1",
-    "laravel-elixir-clear": "^1.0.1"
+    "gulp": "^3.9.1",
+    "laravel-elixir-clear": "^1.0.1",
+    "laravel-elixir-html-minify": "^1.0.1"
   },
   "dependencies": {
     "laravel-elixir": "^4.0.0",
