--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -2,7 +2,7 @@
 # Only use spaces to indent your .yml configuration.
 # -----
 # You can specify a custom docker image from Dockerhub as your build environment
-image: bodva/unit:latest
+image: bodva/sqlunit:latest
 
 pipelines:
   default:
@@ -12,4 +12,5 @@ pipelines:
           - phpunit --version
           - cp .env.example .env
           - composer install
+          - php artisan migrate
           - phpunit
