--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ APP_URL=http://localhost
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=kicker_chart
-DB_USERNAME=root2
+DB_USERNAME=root
 DB_PASSWORD=
 
 CACHE_DRIVER=file
