fix command running phpunit in pipelines. run it from vendor/bin

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -15,4 +15,4 @@ pipelines:
           - mysql --version
           - service mysql start
           - php artisan migrate
-          - phpunit
+          - /vendor/bin/phpunit
