--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -2,7 +2,7 @@
 # Only use spaces to indent your .yml configuration.
 # -----
 # You can specify a custom docker image from Dockerhub as your build environment
-image: bodva/sqlunit:latest
+image: clockwise/php7-mysql-unit
 
 pipelines:
   default:
@@ -14,5 +14,6 @@ pipelines:
           - vendor/bin/phpunit --version
           - mysql --version
           - service mysql start
+          - mysql -u root -e "CREATE DATABASE kicker_chart"
           - php artisan migrate
           - vendor/bin/phpunit
