--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravelcollective/html": "5.2.*",
         "intervention/image": "~2.3",
         "tymon/jwt-auth": "0.5.*",
-	"ext-gd": "*"
+	    "ext-gd": "*",
+        "predis/predis": "^1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
