--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "intervention/image": "~2.3",
         "tymon/jwt-auth": "0.5.*",
 	    "ext-gd": "*",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "barryvdh/laravel-cors": "^0.8.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
