add creating sqlite db file to pipelines

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,6 +8,7 @@ pipelines:
           # install composer vendor scripts
           - composer install
           - vendor/bin/phpunit --version
+          - touch database/database.sqlite
           # migrate
           - php artisan migrate --seed
           # run tests
