fixed facebook signup; added satellizer dependecy

--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "angular-animate": "*",
     "ng-dialog": "*",
     "underscore": "*",
-    "angular-material": "^1.0.8"
+    "angular-material": "^1.0.8",
+    "satellizer": "^0.14.0"
   }
 }
