--- a/bower.json
+++ b/bower.json
@@ -1,18 +1,18 @@
 {
   "name": "kicker",
   "dependencies": {
-    "bootstrap": "^3.3.6",
-    "eonasdan-bootstrap-datetimepicker": "*",
-    "angular": "*",
-    "angular-route": "*",
-    "angular-sanitize": "*",
-    "angular-bootstrap": "*",
-    "ng-file-upload": "*",
-    "angular-resource": "*",
-    "angular-animate": "*",
-    "ng-dialog": "*",
-    "underscore": "*",
-    "angular-material": "^1.0.8",
-    "satellizer": "^0.14.0"
+    "bootstrap": "3.3.7",
+    "eonasdan-bootstrap-datetimepicker": "4.17.44",
+    "angular": "1.5.8",
+    "angular-route": "1.5.8",
+    "angular-sanitize": "1.5.8",
+    "angular-bootstrap": "2.0.1",
+    "ng-file-upload": "12.2.13",
+    "angular-resource": "1.5.8",
+    "angular-animate": "1.5.8",
+    "ng-dialog": "0.6.2",
+    "underscore": "1.8.3",
+    "angular-material": "1.0.9",
+    "satellizer": "0.14.1"
   }
 }
